Exams: Making clickable, fixing submission, handling incomplete, refactoring by residentId
Exam Summary:
- Adding click back to resident page.
- Fixing submission button for new exams (broken in several places).
- Making labels on dashboard clickable.
- Handling incomplete surveys.

Model:
- Setting labels so that if multiple tests are taken on the same day, the display labels automatically iterate (- #2, - #3, etc).

Controller \ Model Refactoring:
- Refactoring methods to work by residentId NOT rIndex
- Renaming openPerson() as openResident()

--- a/client/theme/client.css
+++ b/client/theme/client.css
@@ -252,6 +252,9 @@ label.error {
 	padding: 10px 20px;
 }
 
+#survey_summary {
+	padding: 10px;
+}
 
 
 
